--- a/Ordering/OrderingApp/CartTotal.xaml
+++ b/Ordering/OrderingApp/CartTotal.xaml
@@ -9,22 +9,23 @@
       Title="CartTotal">
 
     <Grid>
-        <Label Content="Cart"  HorizontalAlignment="Center" Height="44" Margin="284,5,260,0" VerticalAlignment="Top" Width="256" FontSize="28" TextOptions.TextHintingMode="Animated" RenderTransformOrigin="0.5,0.5" HorizontalContentAlignment="Center" Background="{x:Null}"/>
-        <ScrollViewer HorizontalAlignment="Center" Height="290" Margin="135,108,135,0" VerticalAlignment="Top" Width="530" CanContentScroll="True" VerticalScrollBarVisibility="Auto">
+        <ScrollViewer HorizontalAlignment="Center" Height="290" Margin="135,104,135,0" VerticalAlignment="Top" Width="530" CanContentScroll="True" VerticalScrollBarVisibility="Auto">
             <StackPanel Name="stc_products" Height="290" Width="530">
 
             </StackPanel>
         </ScrollViewer>
-        <Grid Name="grd_top" HorizontalAlignment="Left" Height="40" Margin="132,71,0,0" VerticalAlignment="Top" Width="530">
+        <Grid Name="grd_top" HorizontalAlignment="Left" Height="40" Margin="132,55,0,0" VerticalAlignment="Top" Width="530">
             <Label Content="Product" HorizontalAlignment="Left" Height="30" Margin="45,0,0,0" VerticalAlignment="Top" Width="120" FontSize="16"/>
             <Label Content="Quantity" HorizontalAlignment="Left" Height="30" Margin="170,0,0,0" VerticalAlignment="Top" Width="85" FontSize="16"/>
             <Label Content="Item Price" HorizontalAlignment="Left" Height="30" Margin="274,0,0,0" VerticalAlignment="Top" Width="80" FontSize="16"/>
             <Label Content="Total" HorizontalAlignment="Left" Height="30" Margin="393,0,0,0" VerticalAlignment="Top" Width="62" FontSize="16"/>
+            <Label Content="Delete" HorizontalAlignment="Left" Margin="458,0,0,0" VerticalAlignment="Top" Width="66" FontSize="16" HorizontalContentAlignment="Right"/>
         </Grid>
         <Label Name="lbl_EmptyCart" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="Your Cart Is Empty" HorizontalAlignment="Left" Margin="150,116,0,0" VerticalAlignment="Top" Height="282" Width="530" FontSize="36" Visibility="Hidden"/>
-        <Label Content="Total:" HorizontalAlignment="Left" Margin="177,417,0,0" VerticalAlignment="Top" Width="85" FontSize="18" FontWeight="Bold"/>
-        <Label Name="lbl_prodQuantity" Content="0 product" HorizontalAlignment="Left" Margin="324,417,0,0" VerticalAlignment="Top" Width="140" FontSize="18" FontWeight="Bold"/>
-        <Label Name="lbl_totalPrice" Content="$0.00" HorizontalAlignment="Left" Margin="528,417,0,0" VerticalAlignment="Top" Width="105" FontSize="18" FontWeight="Bold"/>
+        <Label Content="Total:" HorizontalAlignment="Left" Margin="177,407,0,0" VerticalAlignment="Top" Width="85" FontSize="18" FontWeight="Bold"/>
+        <Label Name="lbl_prodQuantity" Content="0 product" HorizontalAlignment="Left" Margin="324,407,0,0" VerticalAlignment="Top" Width="140" FontSize="18" FontWeight="Bold"/>
+        <Label Name="lbl_totalPrice" Content="$0.00" HorizontalAlignment="Left" Margin="528,407,0,0" VerticalAlignment="Top" Width="105" FontSize="18" FontWeight="Bold"/>
+        <Image HorizontalAlignment="Left" Height="128" Margin="5,2,0,0" VerticalAlignment="Top" Width="128" Source="C:\Users\Pászti-Nagy Kristóf\Documents\Git\OrderService\External\Images\cart.png"/>
 
 
 
