--- a/Ordering/OrderingApp/HomeLoggedIn.xaml
+++ b/Ordering/OrderingApp/HomeLoggedIn.xaml
@@ -5,10 +5,38 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:OrderingApp"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="536" d:DesignWidth="800"
       Title="HomeLoggedIn">
 
     <Grid>
-        
+        <Label Name="lbl_welcome" Content="Hello" HorizontalAlignment="Center"  HorizontalContentAlignment="Center" VerticalAlignment="Top" Height="61" Width="780" Margin="10,18,10,0" FontSize="36"/>
+        <ScrollViewer Name="scr_addresses" HorizontalAlignment="Center" Height="268" Margin="65,159,65,109" VerticalAlignment="Center" Width="670" CanContentScroll="True" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+            <StackPanel Name="stc_addresses" Height="263" Width="670" ScrollViewer.CanContentScroll="True" CanVerticallyScroll="True" CanHorizontallyScroll="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto">
+
+            </StackPanel>
+        </ScrollViewer>
+        <Label Content="Manage addresses" HorizontalAlignment="Left" Margin="65,79,0,0" VerticalAlignment="Top" Width="208" Height="45" FontSize="22"/>
+        <Grid Name="grd_addAddress" HorizontalAlignment="Left" Height="263" Margin="65,111,0,0" VerticalAlignment="Top" Width="670" Visibility="Hidden">
+            <TextBox Name="txt_deliverTo" HorizontalAlignment="Left" Height="24" Margin="171,45,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="157"/>
+            <TextBox Name="txt_zip" HorizontalAlignment="Left" Height="23" Margin="171,108,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="116"/>
+            <TextBox Name="txt_address" HorizontalAlignment="Left" Height="24" Margin="171,167,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="339"/>
+            <TextBox Name="txt_phone" HorizontalAlignment="Left" Height="23" Margin="345,46,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="165"/>
+            <TextBox Name="txt_city" HorizontalAlignment="Left" Height="23" Margin="345,108,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="165"/>
+            <Label Content="Addressee:" HorizontalAlignment="Left" Margin="171,19,0,0" VerticalAlignment="Top" Width="120"/>
+            <Label Content="Phone:" HorizontalAlignment="Left" Margin="345,22,0,0" VerticalAlignment="Top" Width="120"/>
+            <Label Content="ZIP:" HorizontalAlignment="Left" Margin="171,82,0,0" VerticalAlignment="Top" Width="88"/>
+            <Label Content="City:" HorizontalAlignment="Left" Margin="345,82,0,0" VerticalAlignment="Top" Width="135"/>
+            <Label Content="Address:" HorizontalAlignment="Left" Margin="171,141,0,0" VerticalAlignment="Top" Width="256"/>
+            <Button Name="btn_add" Content="Add" HorizontalAlignment="Left" Margin="367,219,0,0" VerticalAlignment="Top" Width="113" Click="btn_add_Click" Height="34" FontSize="16"/>
+            <Button Name="btn_cancel" Content="Cancel" HorizontalAlignment="Left" Margin="203,219,0,0" VerticalAlignment="Top" Width="113" Click="btn_cancel_Click" Height="34" FontSize="16"/>
+        </Grid>
+        <Button Name="btn_addAddress" Content="Add new Address" HorizontalAlignment="center" Margin="0,439,0,0" VerticalAlignment="Top" Width="164" Click="btn_addAddress_Click" Height="46" FontSize="16"/>
+        <Grid Name="grd_top" HorizontalAlignment="Left" Height="48" Margin="65,124,0,0" VerticalAlignment="Top" Width="670">
+            <Label Content="Name / Phone" HorizontalAlignment="Left" Margin="42,7,0,0" VerticalAlignment="Top" FontSize="16"/>
+            <Label Content="Address" HorizontalAlignment="Left" Margin="335,7,0,0" VerticalAlignment="Top" FontSize="16"/>
+        </Grid>
+
+
+
     </Grid>
 </Page>
